--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WOT Blitz stat bot for Discord.",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/*"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,8 @@
     "commander": "^2.9.0",
     "discord.js": "^7.0.1",
     "wotblitz": "^0.1.3"
+  },
+  "devDependencies": {
+    "tape": "^4.5.1"
   }
 }
