--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blitzbot",
   "version": "1.0.0",
   "description": "WOT Blitz stat bot for Discord.",
-  "main": "bot.js",
+  "bin": "bin/bot.js",
   "scripts": {
     "test": "tape test/*"
   },
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/CodeMan99/blitzbot#readme",
   "dependencies": {
+    "async": "^2.0.0-rc.3",
     "commander": "^2.9.0",
     "discord.js": "^7.0.1",
+    "nedb": "^1.8.0",
     "wotblitz": "^0.1.3"
   },
   "devDependencies": {
