--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blitzbot",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "WOT Blitz stat bot for Discord.",
   "bin": "bin/bot.js",
   "scripts": {
@@ -35,6 +35,7 @@
   },
   "changeLog": {
     "1.2.5": [
+      "Added new *changes* command.",
       "The *tank-win-rate* command now includes battle count."
     ]
   }
