--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "changeLog": {
     "unreleased": [
+      "Added count and percentage of played tanks to `mastery-list`.",
+      "Removed order from the `mastery-list`. Seperated entries with a new line.",
       "Added response when the `add` command does not find an account.",
       "Fixed the dash/space issue in `tank-win-rate` vehicle name searching.",
       "Created a new command structure, making the bot more modular."
