Port the "roster" command.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "changeLog": {
     "unreleased": [
+      "Faster clan `roster` command when looking up your own clan multiple times.",
       "Added count and percentage of played tanks to `mastery-list`.",
       "Removed order from the `mastery-list`. Seperated entries with a new line.",
       "Added response when the `add` command does not find an account.",
