Validate with eslint.
Rules affect the following.

 * bin/bot.js
 * lib/createUrl.js
 * lib/helpers.js
 * test/lib.createUrl.js
 * test/lib.helpers.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "WOT Blitz stat bot for Discord.",
   "bin": "bin/bot.js",
   "scripts": {
-    "test": "tape test/*"
+    "test": "faucet test/*.js",
+    "lint": "eslint --format tap bin/*.js lib/*.js lib/command/*.js test/*.js | faucet"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,8 @@
     "wotblitz": "^0.1.3"
   },
   "devDependencies": {
+    "eslint": "^2.10.1",
+    "faucet": "0.0.1",
     "tape": "^4.5.1"
   },
   "changeLog": {
