--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^2.10.2",
     "faucet": "0.0.1",
     "mockery": "^1.7.0",
+    "nock": "^8.0.0",
     "tape": "^4.5.1"
   },
   "changeLog": {
