Test the mastery-list command.
Fixed some typos.
Fixed length reference to object instead of array.
Cleaned up the response test.
Added "None" to mastery-list.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "changeLog": {
     "unreleased": [
+      "Added `mastery-list` \"None\" option to list tanks without any badge.",
       "Faster clan `roster` command when looking up your own clan multiple times.",
       "Added count and percentage of played tanks to `mastery-list`.",
       "Removed order from the `mastery-list`. Seperated entries with a new line.",
