--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "tape": "^4.5.1"
   },
   "changeLog": {
+    "unreleased": [
+      "Added new *donate* command."
+    ],
     "2.0.1": [
       "Fixed updating existing records."
     ],
