Mastery-list will direct message long lists.
Breaking change since this is a user facing change.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "changeLog": {
     "unreleased": [
+      "Changed the *mastery-list* command to direct message really long lists.",
       "Added new *donate* command."
     ],
     "2.0.1": [
