--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         }
     },
     "rules": {
+        "arrow-parens": ["error", "as-needed"],
         "block-scoped-var": "error",
         "brace-style": ["error", "1tbs", {"allowSingleLine": true}],
         "camelcase": ["error", {"properties": "never"}],
@@ -53,6 +54,7 @@
         "no-undef-init": "error",
         "no-use-before-define": ["error", {"functions": false}],
         "object-curly-spacing": ["error", "never"],
+        "prefer-arrow-callback": "error",
         "quotes": ["error", "single"],
         "semi-spacing": ["error", {"before": false, "after": true}],
         "semi": ["error", "always"],
