--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bin": "bin/bot.js",
   "scripts": {
     "test": "APPLICATION_ID=test-app-id-invalid faucet test/*.js",
-    "lint": "eslint --format tap bin/*.js lib/*.js lib/command/*.js test/*.js | faucet"
+    "lint": "eslint --format tap bin/*.js lib/*.js lib/command/*.js test/*.js test/mocks/*.js | faucet"
   },
   "repository": {
     "type": "git",
