--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blitzbot",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "WOT Blitz stat bot for Discord.",
   "bin": "bin/bot.js",
   "scripts": {
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/CodeMan99/blitzbot#readme",
   "dependencies": {
     "async": "^1.5.2",
-    "discord.js": "^8.0.0",
+    "discord.js": "^7.0.1",
     "nedb": "^1.8.0",
     "wotblitz": "^0.1.3"
   },
@@ -38,6 +38,9 @@
     "tape": "^4.6.0"
   },
   "changeLog": {
+    "2.2.1": [
+      "Revert discord.js update."
+    ],
     "2.2.0": [
       "Add lookup by mention to *tank-win-rate*. Feature in testing!",
       "Fixed *roster* bug when the message author is not in a clan.",
