Parse message content using id style mention.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blitzbot",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "WOT Blitz stat bot for Discord.",
   "bin": "bin/bot.js",
   "scripts": {
@@ -37,6 +37,9 @@
     "tape": "^4.6.2"
   },
   "changeLog": {
+    "2.3.1": [
+      "Fix bug with message parsing in text channels."
+    ],
     "2.3.0": [
       "Remove async dependency.",
       "Upgrade to wotblitz v1.0.0.",
