--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blitzbot",
-  "version": "2.3.4",
+  "version": "2.3.5",
   "description": "WOT Blitz stat bot for Discord.",
   "bin": "bin/bot.js",
   "scripts": {
@@ -37,6 +37,9 @@
     "tape": "^4.6.3"
   },
   "changeLog": {
+    "2.3.5": [
+      "Fixed attempt to get permissions for a direct message."
+    ],
     "2.3.4": [
       "Fixed incorrect sending of messages without permission."
     ],
