--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "tape": "^4.7.0"
   },
   "changeLog": {
+    "unreleased": [
+      "Fixed multi-region support for direct messages."
+    ],
     "3.0.0": [
       "Added multi-region support."
     ],
