--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "changeLog": {
     "unreleased": [
       "Fixed multi-region support for direct messages.",
-      "Upgrade nock to 9.0.14."
+      "Upgrade nock to 9.0.14.",
+      "Added helper for logging sent messages."
     ],
     "3.0.0": [
       "Added multi-region support."
