--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "wotblitz": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^4.2.0",
+    "eslint": "^4.3.0",
     "faucet": "0.0.1",
     "mockery": "^2.1.0",
     "nock": "^9.0.14",
@@ -41,7 +41,8 @@
       "Fixed multi-region support for direct messages.",
       "Upgrade nock to 9.0.14.",
       "Added helper for logging sent messages.",
-      "Added conveince configuration to select default region."
+      "Added conveince configuration to select default region.",
+      "Upgrade eslint to 4.3.0"
     ],
     "3.0.0": [
       "Added multi-region support."
