--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
       "Added helper for logging sent messages.",
       "Added conveince configuration to select default region.",
       "Upgrade eslint to 4.4.0",
-      "Upgrade tape to 4.8.0"
+      "Upgrade tape to 4.8.0",
+      "Fixed usage of deprecated discord.js methods."
     ],
     "3.0.0": [
       "Added multi-region support."
