:heavy_plus_sign: eslint-plugin-json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,9 @@
       "impliedStrict": true
     }
   },
+  "plugins": [
+    "json"
+  ],
   "rules": {
     "arrow-parens": ["error", "as-needed"],
     "block-scoped-var": "error",
