--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
   "homepage": "https://github.com/CodeMan99/blitzbot#readme",
   "dependencies": {
     "bufferutil": "^3.0.3",
-    "discord.js": "^11.2.1",
-    "erlpack": "github:hammerandchisel/erlpack",
+    "discord.js": "^11.3.0",
+    "erlpack": "github:discordapp/erlpack",
     "nedb": "^1.8.0",
     "remove-accents": "^0.4.2",
     "wotblitz": "^1.1.0"
   },
   "devDependencies": {
-    "cross-env": "^5.1.1",
-    "eslint": "^4.13.0",
+    "cross-env": "^5.1.3",
+    "eslint": "^4.17.0",
     "eslint-plugin-json": "^1.2.0",
     "faucet": "0.0.1",
     "mockery": "^2.1.0",
-    "nock": "^9.1.4",
+    "nock": "^9.1.6",
     "tape": "^4.8.0"
   }
 }
