Add CircleCI extension for VSCode.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
 		"vscode": {
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
+				"CircleCI.circleci",
 				"dbaeumer.vscode-eslint"
 			]
 		}
