--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "async": "^3.2.4",
     "bufferutil": "^4.0.7",
     "discord.js": "^12.3.1",
-    "erlpack": "github:discordapp/erlpack",
+    "erlpack": "github:discord/erlpack",
     "nedb": "^1.8.0",
     "remove-accents": "^0.4.4",
     "wotblitz": "^1.2.0"
