--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   },
   "homepage": "https://github.com/CodeMan99/blitzbot#readme",
   "dependencies": {
+    "@seald-io/nedb": "^4.0.0",
     "async": "^3.2.4",
     "bufferutil": "^4.0.7",
     "discord.js": "^12.3.1",
     "erlpack": "github:discord/erlpack",
-    "nedb": "^1.8.0",
     "remove-accents": "^0.4.4",
     "wotblitz": "^1.3.1"
   },
